# pa-learn

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Makefile  vcpkg.json
include/: Singleton.hh
include/Glx/: common.h
include/Glx/Interfaces/: Initializable.h  Singleton.h  Tickable.h
include/LiteEmu/: Devices.h  Memory.h  common-riscv32.h  common.h
include/LiteEmu/Cpu/: Executor-riscv32.h  Executor.h  Register-riscv32.h  Register.h
nemu/src/: nemu-main.c
nemu/src/cpu/: cpu-exec.c
nemu/src/isa/riscv32/: inst.c  reg.c
nemu/src/monitor/sdb/: cmd_p.c  cmd_p.h  expr.c  sdb.c  sdb.h  watchpoint.c
nemu/tools/gen-expr/: Makefile  gen-expr.c
src/: main.cc  main.cpp
src/Glx/: Engine.hpp  Gl.hpp  GlWindow.hh  GlWindow.hpp  ImGui.hpp  ImGuiBase.hpp  ImGuiBaseFrame.hh  ImGuiBaseFrame.hpp  ImGuiFrame.hpp  Logger.hpp  Logging.hh  Logging.hpp  TickEngine.hh  TickEngine.hpp
src/Glx/ImGuiFrameContent/: DebugHud.hh  DebugHud.hpp  Flags.hpp  Main.hh  Main.hpp
src/Glx/ImGuiFrames/: Main.hpp
src/LiteEmu/: Cpu.hh  Devices.hh  Memory.cc  Memory.hh  Monitor.hh
src/LiteEmu/Cpu/: Executor-riscv32.cc  Register-riscv32.cc  Register.cc  Register.hh
